<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/drawerheader"
    android:gravity="bottom"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"


    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:background="@drawable/circle"
        android:contentDescription="@string/nav_header_desc"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle"/>

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="206dp"
        android:layout_height="25dp"
        android:layout_marginTop="35dp"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_subname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="10sp"
        android:textStyle="bold"
        android:text="@string/nav_header_subtitle"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/nav_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
